xforms-model-construct event handler not firing. Bug 293437, r=me+doronr, a=mkaply, patch by aaronr